--- a/css/screen.css
+++ b/css/screen.css
@@ -8,11 +8,25 @@
 
 :root {
     /* colors */
+    --color-alpha: #CCE7FF;
+    --color-beta: #0F3557;
+
+    --color-front: var(--color-beta);
+    --color-back: var(--color-alpha);
+
+    --global-background: var(--color-back);
+    --global-text-color: var(--color-front);
+
+    --global-logo-fill: var(--color-front);
+    --global-border-color: var(--color-front);
 
     /* opacity */
+    --global-muted-opacity: 0.6;
 
     /* transitions */
 }
+
+/* @media (prefer-color-scheme) */
 
 /*------------------------------------*\
 #GENERIC
@@ -25,12 +39,25 @@
 */
 
 html {
-    font-size: 16px;
-    line-height: 1.5;
-    font-family: Helvetica, arial, sans-serif;
+    /* POSITIONING */
+
+    /* BOX MODEL */
     box-sizing: border-box;
+
+    /* FONT */
+    color: var(--global-text-color);
+    font-size: 16px; /* font-size op de body = 1REM */
+    line-height: 1.5;
+    font-family: 'Work Sans', Helvetica, arial, sans-serif;
+    font-feature-settings: "zero" 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    /* APPEARANCE */
+    background-color: var(--global-background);
+
+    /* OTHER */
+    
 }
 
 *,
@@ -249,7 +276,12 @@ input::placeholder {
 */
 
 .c-logo {
-
+    /* TODO: zet de sun en de tekst naast elkaar */
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1rem;
 }
 
 /*
@@ -259,11 +291,13 @@ input::placeholder {
 */
 
 .c-sun {
-
+    height: 1.375rem;
+    width: 1.375rem;
+    fill: var(--global-logo-fill);
 }
 
 .c-logo .c-sun {
-
+    margin-right: 0.5rem;
 }
 
 /*
@@ -272,11 +306,80 @@ input::placeholder {
     Main app wrapper
 */
 
+.c-app {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 2 * 1rem);
+    box-sizing: content-box; /* Paddig optellen bij de (max)width ipv. het toevoegen aan de binnenkant */
+    max-width: 25rem; /* Is dit slim...? */
+    margin: 0 auto;
+    padding: 1rem 2rem; /* 16px 32px (in onze huidige font-size) */
+}
+
+.c-app__summary {
+    font-size: 1.75rem;
+    line-height: 2.5rem;
+}
+
+.c-app__location {
+
+}
+
 /*
     Component: Horizon
     ---
     Horizon with sun visualisation
 */
+
+.c-horizon {
+    margin-top: auto; /* Vul de ruimte maar op */ 
+}
+.c-horizon__sky-wrapper {
+    position: relative;
+    height: 12.5rem;
+    overflow: hidden;
+    padding-top: 1.375rem;
+    padding-right: 2.5rem;
+}
+
+.c-horizon__sky {
+    position: relative;
+    height: 100%;
+}
+
+.c-horizon__sun {
+    position: absolute;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+
+    font-size: 0.75rem;
+    line-height: 0.875rem;
+
+    transform: translateY(50%); /* 22px : percentage van maken */
+}
+.c-horizon__sun::before {
+    content: attr(data-time);
+    margin-bottom: 0.5rem;
+}
+
+.c-horizon__line {
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 2.5rem;
+    padding-top: 0.625rem;
+
+    border-top: 1px solid var(--global-border-color);
+}
+
+.c-horizon__time {
+    font-size: 0.75rem;
+    line-height: 0.875rem;
+}
 
 /*------------------------------------*\
 #UTILITIES
@@ -287,6 +390,10 @@ input::placeholder {
     Mute with opacity
 */
 
+.u-muted {
+    opacity: var(--global-muted-opacity);
+}
+
 /*------------------------------------*\
 #STATES
 \*------------------------------------*/
@@ -296,6 +403,10 @@ input::placeholder {
 */
 
 /* Night version: just switch the light and dark vars */
+.is-night {
+    --color-front: var(--color-alpha);
+    --color-back: var(--color-beta);
+}
 
 /*------------------------------------*\
 #MEDIA
